Fix overlap between new tweet panel and notification column

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -325,7 +325,10 @@ h1 {
   display: block;
   position: relative;
   top: 50%;
-  width: 250px;
+  text-align: center;
+  color: #777;
+  font-size: 22px;
+  font-weight: bold;
 }
 
 .notification {
@@ -555,6 +558,7 @@ button#buttonOpenNotificationPanel {
     -ms-transition: all 1s ease-in-out;
     -o-transition: all 1s ease-in-out;
     transition: all 1s ease-in-out;
+    height: 100%;
 }
 
 #messageEditionPanel.open {
